[tool.poetry]
name = "bertopic"
version = "0.1.0"
description = "A package for using BERTopic on text data"
authors = ["Tanmay Agarwal and Savinay Singh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.2"
nltk = "^3.8.1"
pandas = "^1.5.3"
torch = "^1.13.1"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
